--- a/Local Weather/index.html
+++ b/Local Weather/index.html
@@ -1,203 +1,109 @@
 <!DOCTYPE html>
-<html >
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <link rel="shortcut icon" type="image/x-icon" href="https://production-assets.codepen.io/assets/favicon/favicon-8ea04875e70c4b0bb41da869e81236e54394d63638a1ef12fa558a4a835f1164.ico" />
-  <link rel="mask-icon" type="" href="https://production-assets.codepen.io/assets/favicon/logo-pin-f2d2b6d2c61838f7e76325261b7195c27224080bc099486ddd6dccb469b8e8e6.svg" color="#111" />
-  <title>CodePen - Local Weather</title>
-  
-  
-  
-  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-<link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.10/css/weather-icons.css'>
-<link rel='stylesheet prefetch' href='https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css'>
+    <title>CodePen - Local Weather</title>
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.10/css/weather-icons.css'>
+    <link rel='stylesheet prefetch' href='https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css'>
+    <link rel='stylsheet' href='https://cdn.rawgit.com/MessiaHack/FreeCodeCamp/master/Local%20Weather/style.css'>
 
-      <style>
-      .body {
-	background-color: silver;
-	background: url('http://media1.santabanta.com/full5/outdoors/landscapes/landscapes-134a.jpg') no-repeat center center fixed;
-}
-.container {
-	background-color: rgba(0,136,107,0.7);
-	color: white;
-	position: relative;
-	text-align: left;
-	border: 0;
-	padding: 15px;
-	border-radius: 10px;
-	margin-top: 50px;
-	box-shadow: 0px 0px 15px black;
-}
-
-/*  Main Area */
-.current-icon {
-	font-size: 5em;
-}
-.data-column {
-	text-align: center;
-}
-.current-button, .forecast-button{
-	margin-bottom: 30px;
-}
-.city-search {
-	color: black;
-	margin-top: 5px;
-	margin-bottom: 5px;
-	margin-left: 5px;
-	width: 91%;
-	border: 0px;
-	background-color: rgba(192,192,192,0.0);
-}
-.search {
-	background-color: rgba(192,192,192,0.5);
-	margin-bottom: 5px;
-	border-radius: 15px;
-}
-.fa-search {
-	margin-left: 5px;
-}
-.degrees {
-	font-size: 35px;
-}
-
-/*  Forecast Area */
-.week-row {
-	text-align: center;
-}
-.day-column {
-	border: 1px solid;
-	border-left: none;
-}
-.day-column:last-child {
-	border-right: none;
-}
-.forecast-column {
-	text-align: center;
-	padding-top: 1em;
-	border-right: 1px solid;
-}
-.forecast-column:last-child {
-	border-right: none;
-}
-.forecast-icon {
-	font-size: 4em;
-	padding-bottom: 10px;
-	}
-    </style>
-
-  <script>
-  window.console = window.console || function(t) {};
-</script>
-
-  
-  
-  <script>
-  if (document.location.search.match(/type=embed/gi)) {
-    window.parent.postMessage("resize", "*");
-  }
-</script>
-
+    <script type='text/javascript' src 'https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js'></script>
+    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
+    <script src="https://cdn.rawgit.com/MessiaHack/FreeCodeCamp/master/Local%20Weather/weather.js"></script>
 </head>
 
-<body translate="no" >
-
-  <body class="body">
-<div class="container">
-	<div class="row">
-		<div class="col-lg-4 city-column">
-			<h1 class="current-city"></h1>
-			<p><span class="current-time"></span></p>
-		</div>
-		<div class="col-lg-4 data-column">
-			<span class="current-icon"></span>
-			<h2 class="current-temp"></h2>
-			<h3 class="current-cond"></h3>
-		</div>
-		<div class="col-lg-4">
-			<div class="search">
-				<i class="fa fa-search" aria-hidden="true"></i>
-				<input type="search" class="city-search" placeholder="Enter Location"></input>
-			</div>
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="row">
-						<div class="col-lg-12">
-							<p><i class="wi wi-raindrop"></i> <b>Precipitation</b>: <span class="precip"></span></p>
-							<p><i class="wi wi-humidity"></i> <b>Humidity</b>: <span class="humid"></span></p>
-							<p><i class="wi wi-wind-direction"></i> <b>Wind</b>: <span class="wind"></span></p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					
-					<div class="row">
-						<div class="col-lg-12">
-							<p><i class="wi wi-sunrise"></i> <b>Sunrise</b>: <span class="sunrise"></span></p>
-							<p><i class="wi wi-sunset"></i> <b>Sunset</b>: <span class="sunset"></span></p>
-							<p><i class="wi wi-night-clear"></i> <b>Moon</b>: <span class="moon"></span></p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="row week-row">
-		<div class="col-lg-2 day-column"><span class="day1"></span>
-		</div>
-		<div class="col-lg-2 day-column"><span class="day2"></span>
-		</div>
-		<div class="col-lg-2 day-column"><span class="day3"></span>
-		</div>
-		<div class="col-lg-2 day-column"><span class="day4"></span>
-		</div>
-		<div class="col-lg-2 day-column"><span class="day5"></span>
-		</div>
-		<div class="col-lg-2 day-column"><span class="day6"></span>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-lg-2 forecast-column">
-			<span class="day-0-icon"></span>
-			<p><span class="temp day-1-temp"></span></p>
-			<p><span class="cond day-1-cond"></span></p>
-		</div>
-		<div class="col-lg-2 forecast-column">
-			<span class="day-1-icon"></span>
-			<p><span class="temp day-2-temp"></span></p>
-			<p><span class="cond day-2-cond"></span></p>
-		</div>
-		<div class="col-lg-2 forecast-column">
-			<span class="day-2-icon"></span>
-			<p><span class="temp day-3-temp"></span></p>
-			<p><span class="cond day-3-cond"></span></p>
-		</div>
-		<div class="col-lg-2 forecast-column">
-			<span class="day-3-icon"></span>
-			<p><span class="temp day-4-temp"></span></p>
-			<p><span class="cond day-4-cond"></span></p>
-		</div>
-		<div class="col-lg-2 forecast-column">
-			<span class="day-4-icon"></span>
-			<p><span class="temp day-5-temp"></span></p>
-			<p><span class="cond day-5-cond"></span></p>
-		</div>
-		<div class="col-lg-2 forecast-column">
-			<span class="day-5-icon"></span>
-			<p><span class="temp day-6-temp"></span></p>
-			<p><span class="cond day-6-cond"></span></p>
-		</div>
-	</div>
-</div>
-</body>
-    <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-58d22c749295bca52f487966e382a94a495ac103faca9206cbd160bdf8aedf2a.js"></script>
-
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
-<script></script>
-
-  
-  
-
+<body class="body">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 city-column">
+                <h1 class="current-city"></h1>
+                <p><span class="current-time"></span></p>
+            </div>
+            <div class="col-lg-4 data-column">
+                <span class="current-icon"></span>
+                <h2 class="current-temp"></h2>
+                <h3 class="current-cond"></h3>
+            </div>
+            <div class="col-lg-4">
+                <div class="search">
+                    <i class="fa fa-search" aria-hidden="true"></i>
+                    <input type="search" class="city-search" placeholder="Enter Location"></input>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <p><i class="wi wi-raindrop"></i> <b>Precipitation</b>: <span class="precip"></span></p>
+                                <p><i class="wi wi-humidity"></i> <b>Humidity</b>: <span class="humid"></span></p>
+                                <p><i class="wi wi-wind-direction"></i> <b>Wind</b>: <span class="wind"></span></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <p><i class="wi wi-sunrise"></i> <b>Sunrise</b>: <span class="sunrise"></span></p>
+                                <p><i class="wi wi-sunset"></i> <b>Sunset</b>: <span class="sunset"></span></p>
+                                <p><i class="wi wi-night-clear"></i> <b>Moon</b>: <span class="moon"></span></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row week-row">
+            <div class="col-lg-2 day-column">
+                <span class="day0"></span>
+            </div>
+            <div class="col-lg-2 day-column">
+                <span class="day1"></span>
+            </div>
+            <div class="col-lg-2 day-column">
+                <span class="day2"></span>
+            </div>
+            <div class="col-lg-2 day-column">
+                <span class="day3"></span>
+            </div>
+            <div class="col-lg-2 day-column">
+                <span class="day4"></span>
+            </div>
+            <div class="col-lg-2 day-column">
+                <span class="day5"></span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-2 forecast-column">
+                <span class="day-0-icon"></span>
+                <p><span class="temp day-1-temp"></span></p>
+                <p><span class="cond day-0-cond"></span></p>
+            </div>
+            <div class="col-lg-2 forecast-column">
+                <span class="day-1-icon"></span>
+                <p><span class="temp day-2-temp"></span></p>
+                <p><span class="cond day-1-cond"></span></p>
+            </div>
+            <div class="col-lg-2 forecast-column">
+                <span class="day-2-icon"></span>
+                <p><span class="temp day-3-temp"></span></p>
+                <p><span class="cond day-2-cond"></span></p>
+            </div>
+            <div class="col-lg-2 forecast-column">
+                <span class="day-3-icon"></span>
+                <p><span class="temp day-4-temp"></span></p>
+                <p><span class="cond day-3-cond"></span></p>
+            </div>
+            <div class="col-lg-2 forecast-column">
+                <span class="day-4-icon"></span>
+                <p><span class="temp day-5-temp"></span></p>
+                <p><span class="cond day-4-cond"></span></p>
+            </div>
+            <div class="col-lg-2 forecast-column">
+                <span class="day-5-icon"></span>
+                <p><span class="temp day-6-temp"></span></p>
+                <p><span class="cond day-5-cond"></span></p>
+            </div>
+        </div>
+    </div>
 </body>
